--- a/Repository_format.mw
+++ b/Repository_format.mw
@@ -1,29 +1,16 @@
-<noinclude>[[Article description::A quick reference to Gentoo ebuild repository (overlay) format.]]</noinclude>
+A quick reference to Gentoo repository (overlay) format.
 
 {{MessageBox|Tree|
- ''Repository root''
- ├── ''<category>''/
- │ &nbsp; ├── ''<name>''/
- │ &nbsp; │ &nbsp; ├── ''<name>-<version>''.ebuild
- │ &nbsp; │ &nbsp; ├── ...
- │ &nbsp; │ &nbsp; ├── [[/package/Manifest|Manifest]]
- │ &nbsp; │ &nbsp; ├── [[/package/metadata.xml|metadata.xml]]
- │ &nbsp; │ &nbsp; └── files/
- │ &nbsp; ├── [[/category/metadata.xml|metadata.xml]]
- │ &nbsp; └── ...
- ├── ...
- ├── [[eclass|eclass/]]
- ├── [[:/var/db/repos/gentoo/licenses|licenses/]]
- ├── [[:/var/db/repos/gentoo/metadata|metadata]]/
- │ &nbsp; └── [[/metadata/layout.conf|layout.conf]]
- └── profiles/
- &nbsp; &nbsp; ├── ...
- &nbsp; &nbsp; └── [[/profiles/repo_name|repo_name]]
-}}
-
-== See also ==
-
-* {{See also|/etc/portage}}
-* {{See also|/var/db/repos/gentoo}}
+<tt>Repository root <br/> 
+├── category <br/>
+│ &nbsp; └── package <br/>
+│ &nbsp; │ &nbsp; └── ... <br/>
+│ &nbsp; └── ... <br/>
+├── ... <br/>
+├── [[/eclass|eclass]] <br/>
+├── [[/licenses|licenses]] <br/>
+├── metadata <br/>
+└── profiles <br/>
+</tt>}}
 
 [[Category:Portage]]
