--- a/Uvesafb.mw
+++ b/Uvesafb.mw
@@ -1,68 +1,40 @@
-{{Lowercase title}}
-{{Dated|date=2017-08-14}}
 {{InfoBox stack
-|{{InfoBox wikipedia|VESA BIOS Extensions|header=true}}
-{{InfoBox todo|Update regarding the removal of [https://gitweb.gentoo.org/repo/gentoo.git/commit/profiles/package.mask?id{{=}}209bf189be46f4151e50da2b8b213d2240a322f8 v86d]}}
+|{{InfoBox wikipedia|VESA_BIOS_Extensions|header=true}}
 }}
-
-'''uvesafb''' is [[Article description::a [[framebuffer]] driver to use the VESA BIOS Extensions for changing display modes or display graphics on the console.]]
+The uvesafb is a kernel module to use the VESA BIOS Extensions for changing display modes or display graphics on the console.
 
 == Installation ==
-
-The uvesafb relies on kernel modules and the daemon {{Package|sys-apps/v86d}} to change the resolutions and display. Prepare the system for the daemon by including kernel support.
-
+The uvesafb relys on kernel modules and the daemon {{Package|sys-apps/v86d}} to change the resolutions and display.
 === Kernel ===
-
-Activate the following kernel options:
-
-{{KernelBox|1=
-Device Drivers  --->
-   <*> Connector - unified userspace <-> kernelspace linker  --->
-   Graphics support  --->
-      Frame buffer Devices  --->
-         [*] Support for frame buffer devices --->
-            [*] Enable firmware EDID
-            <*> Userspace VESA VGA graphics support
-}}
-
-=== Emerge ===
-
-{{Important|Before this step, the kernel needs to be built and the link in {{Path|/usr/src/linux}} updated to point to the compiled kernel sources with uvesafb enabled.}}
-
+The following need to be enabled in the kernel:
+{{Kernel|Enable usevafb|<pre>
+Device Drivers ->
+    <*> Connector - unified userspace <-> kernelspace linker
+    Graphics support ->
+        [*] Support for frame buffer devices  --->
+        [*] Enable firmware EDID
+        ...
+        <*> Userspace VESA VGA graphics support</pre>}}
+=== Software ===
+{{Important|Before this step, the kernel needs to be build and the link in {{Path|/usr/src/linux}} updated to point to the compiled kernel sources with the enabled uvesafb.}}
 Rebuild {{Package|dev-libs/klibc}} and install {{Package|sys-apps/v86d}}:
-
-{{Emerge|params+=--oneshot|dev-libs/klibc}}
-
-{{Emerge|sys-apps/v86d}}
-
-=== Initramfs inclusion ===
-
-Once the installation is finished, you need to activate the following kernel options and ''then'' rebuild the initramfs:
-
-{{KernelBox|1=
-General setup  --->
-    [*] Initial RAM filesystem and RAM disk (initramfs/initrd) support
-    (/usr/share/v86d/initramfs) Initramfs source file(s)
-}}
-
-Use [[dracut]], [[genkernel]], or another initramfs generator of choice to rebuild the initramfs.
-
-== Configuration ==
-
-=== Bootloader ===
-
-Be sure the kernel command-line parameters are fixed in whatever bootloader loads the kernel.
-
-===== GRUB2 =====
-
-{{GRUB2|video{{=}}uvesafb:1024x768-32,mtrr:3,ywrap}}
+{{RootCmd|emerge --oneshot --ask {{Package|dev-libs/klibc}}}}
+{{Emerge| sys-apps/v86d}}
+Once the installation is finished update the kernel configuration to build v86d into the kernel:
+{{Kernel|Include v86d|<pre>
+General Setup ->
+	(/usr/share/v86d/initramfs) Initramfs source file(s)</pre>}}
+{{Important|Rebuild the kernel with the new configuration}}
 
 == Usage ==
+The resolution and behaviour of uvesafb is set during boot, a full list of kernel parameters can be found online here:
+[http://www.mjmwired.net/kernel/Documentation/fb/uvesafb.txt Documentation/fb/uvesafb.txt] or in your {{Path|/usr/src/linux/Documentation/fb/uvesafb.txt}}.
 
-The resolution and behavior of uvesafb is set during boot, a full list of kernel parameters can be found [http://www.mjmwired.net/kernel/Documentation/fb/uvesafb.txt online] or in the local kernel documentation via {{Path|/usr/src/linux/Documentation/fb/uvesafb.txt}}.
+=== Bootloader ===
+In [[GRUB2]] the parameters can be added to the variable GRUB_CMDLINE_LINUX_DEFAULT in {{Path|/etc/defaults/grub}}. For GRUB or other bootloaders check their manual pages on how to append to the kernel commandline. Example:
+{{Code|kernel commandline|<nowiki>video=uvesafb:1024x768-32,mtrr:3,ywrap</nowiki>}}
 
-== External resources ==
+== External Resources ==
+* [http://www.funtoo.org/wiki/Uvesafb - Funtoo wiki]
 
-* [http://www.funtoo.org/wiki/Uvesafb Funtoo Wiki's entry on uvesafb]
-
-[[Category:Graphics Adapters]]
+[[category:Bootloaders]]
