--- a/Repository_format%2Fprofiles%2Frepo_name.mw
+++ b/Repository_format%2Fprofiles%2Frepo_name.mw
@@ -1,19 +1,12 @@
-{{DISPLAYTITLE:Repository format/profiles/repo_name}}
-
-The {{Path|profiles/repo_name}} file (''obligatory'') specifies the repository name. The name assigned there is used by the package manager to refer to the contents of the repository. In case a [[Repository_format/metadata/layout.conf#repo-name|repo-name]] key is given in [[Repository_format/metadata/layout.conf|metadata/layout.conf]] that one takes precedence.
+{{DISPLAYTITLE:profiles/repo_name}}
+The '''profiles/repo_name''' file (''obligatory'') specifies the repository name. The name assigned there is used by the package manager to refer to the contents of the repository.
 
 == File format ==
 
 The ''repo_name'' file is a plain, ASCII text file containing the repository name on its only line.
 
-{{FileBox|filename=profiles/repo_name|title=Example for repository named ''my-repo''|1=
-my-repo
-}}
-
-For configuration files or sections in  [[:/etc/portage/repos.conf#Format|/etc/portage/repos.conf]] it is recommended that <code>[repository_name]</code> is the same as the name specified here.
+{{File|profiles/repo_name|Example for repository named ''my-repo''|<pre>my-repo</pre>}}
 
 == layman repository list ==
 
-It is required that repository names in {{Path|repo_name}} files are the same as repository names on the layman repository list. In the future, an automated check will be added to enforce that as requested in {{Bug|382603}}.
-
-[[Category:Portage]]
+It is required that repository names in ''repo_name'' files are the same as repository names on the layman repository list. In the future, an automated check will be added to enforce that as requested in {{Bug|382603}}.
