Created page with "enlightenment is a light weight and eye candy Desktop Environment. This guide will highlight and go trough installing enlightenement E17 or DR17 or 0.17 version. Although the sta..."

--- a/Enlightenment.mw
+++ b/Enlightenment.mw
@@ -1,263 +1,224 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.enlightenment.org/|header=true}}
-|{{InfoBox package|x11-wm/enlightenment}}
-|{{InfoBox wikipedia|Enlightenment (software)}}
-|{{InfoBox gitweb|https://git.enlightenment.org/|Enlightenment's git repository|raw=true}}
-|{{InfoBox irc|e}}
-}}
+enlightenment is a light weight and eye candy Desktop Environment. This guide will highlight and go trough installing enlightenement E17 or DR17 or 0.17 version. Although the stable 0.16 version is available in the official tree, I'd advise to make the plunge to install the live version. One of the advantages of E17 is that you can really build what you want/need {{Package|x11-wm/enlightenment}} with just enabling or disabling e_modules_$module USE flag which will permit to make a truly light weight and lean DE that nothing could match. [[LXDE]] can almost match the light weight and lean side of E17 with the old style or classical DE touch.
 
-'''Enlightenment''' is [[Article description::an eye-candy, compositing and stacking [[window manager]] that is released under the permissive BSD License.]] It was first released in 1997 by Carsten Haitzler (Rasterman) and this original release was dubbed Enlightenment DR16 (or E16 for short). In 2012 a new version of Enlightenment was released, which was called Enlightenment DR17 (or E17). Since then many further major releases of Enlightenment have been made: E18, E19, E20, E21 and E22. E20, E21 and E22  are all presently in the Portage Tree. 
+''Enlightenment is not just a window manager for Linux/X11 and others, but also a whole suite of libraries to help you create beautiful user interfaces with much less work than doing it the old fashioned way and fighting with traditional toolkits, not to mention a traditional window manager. It covers uses from small mobile devices like phones all the way to powerful multi-core desktops (which are the primary development environment).''
 
-There has been some confusion over Enlightenment versions. E16, despite being an older release of Enlightenment, has its releases numbered 1.x, while the later releases of Enlightenment (E17-E22) all have decimal release numbers. E17 is numbered 0.17.x, E18 is numbered 0.18.x, E19 is numbered 0.19.x while E20 is numbered 0.20.x and so on. Consequently, it is advised that users are careful as to which version of Enlightenment they are installing. While the version numbers reflect actual versions of the upstream tar archives, they can be confusing.
+If you decided to install DR16 version, then go ahead and merge {{Package|x11-wm/enlightenment}} and unmask some package if not all, if need be, to get the latest bits of enlightenment development trunk.
 
-== Installation ==
+From here on, this article will deal with installing E17 using enlightenment overlay maintained by the enlightenment and gentoo developers.
 
-=== USE flags ===
+== Preparation ==
 
-{{USEflag|package=x11-wm/enlightenment}}
+To install E17 you will need {{Package|sys-portage/layman}} with svn support. And then add enlightenement overlay with layman.
 
-All wayland-related modules should be either disabled or enabled, depending on your <code>wayland</code> USE flag status.
+{{File|/etc/portage/package.use||sys-portage/layman subversion}}
+{{Emerge|sys-portage/layman}}
+{{RootCmd|layman -a enlightenment}}
 
-{{Important|Upstream requires <code>systemd</code> to be used when enabling <code>wayland</code>, see [https://git.enlightenment.org/core/enlightenment.git/tree/README.wayland Wayland requirements].}}
-
-For a working Enlightenment installation, USE flags with EFL are important. 
-
-{{USEflag|package=dev-libs/efl}}
-
-=== Latest Enlightenment  ===
-
-For installing the latest Enlightenment WM and the needed libraries, just issue the following command:
-
-{{Emerge|enlightenment}}
-
-For SVG support e.g. for previews or menu entries, you can additionally install dev-libs/efl with the <code>svg</code> USE flag enabled.
-
-Addition to {{Path|/etc/portage/package.use}} (unless you already have the <code>svg</code> USE flag globally enabled) and install the package:
-
-{{RootCmd|euse -p dev-libs/efl -E svg}}
-
-{{Emerge|efl}}
-
-Enabling at least these USE flags for efl is recommended when running Enlightenment: <code>X bmp drm eet fontconfig gif gstreamer harfbuzz ico jpeg2k opengl pulseaudio sound svg system-lz4 systemd</code>
-
-=== Stable Enlightenment ===
-
-Because upstream only provides support for the latest Enlightenment, Gentoo will try to follow upstream's release cycles closely. If you prefer older releases of Enlightenment WM, you might have to set up a [https://wiki.gentoo.org/wiki/Custom_repository#Creating_a_local_repository local overlay] to store ebuilds for x11-wm/enlightenment and dev-libs/efl. You can find all the older ebuilds by utilizing [https://gitweb.gentoo.org/repo/gentoo.git/log/x11-wm/enlightenment?showmsg=1 Git history].
-
-On stable systems, to get the latest stable version, type
-
-{{Emerge|enlightenment}}
-
-You can utilize {{Path|/etc/portage/package.mask}} to block incoming updates.
-
-=== Enlightenment live ebuilds ===
-
-The process is a little different because it's recommended to always rebuild all of the components using their current state in [[Git]]. Make sure you have installed [[Layman]] or [[Eselect/Repository]]. Now you can add the [http://gpo.zugaina.org/Overlays/enlightenment-live enlightenment-live] overlay.
-
-{{RootCmd|layman -a enlightenment-live}}
-
-or
-
-{{RootCmd|eselect repository enable enlightenment-live}}
-
-Make sure to install all core enlightenment packages using live ebuilds. You can update using the exact same command to ensure that all core packages are updated.
-
-{{Emerge|--autounmask-write @enlightenment-core-9999}}
-
-The ''enlightenment-core-9999'' set contains the following packages:
-{{CodeBox|title=enlightenment-core-9999 content|1= ''
- =dev-libs/efl-9999 
- =x11-wm/enlightenment-9999 
- =x11-terms/terminology-9999}}
-
-If you want to install both stable and experimental EFL application, you may emerge the ''enlightenment-apps-9999'' set. It contains:
-{{CodeBox|title=enlightenment-apps-9999 content|1= ''
- =app-editors/ecrire-9999
- =app-misc/equate-9999
- =dev-vcs/egitu-9999
- =media-gfx/eluminance-9999
- =media-gfx/ephoto-9999
- =media-video/rage-9999
- =net-irc/express-9999
- =net-p2p/epour-9999
- =dev-util/espionage-9999
- =sys-process/evisum-9999}}
-
-{{Note|The ebuild for EFL is now using meson. USE flags may be different.}} 
-
-Be aware that they are currently masked for ~amd64, so you need to unmask them.
-{{RootCmd|emerge --ask --autounmask-write efl enlightenment}}
-
-{{Note|The ebuilds are currently tested for X and not for Wayland. Further investigation and feedback is needed for Enlightenment with Wayland}} 
-
-If anything goes wrong, file a ticket on GitHub or contact [[User:Rafspiny]]. Those are live ebuilds and therefore they can occasionally need updating. I'm also considering starting a separate overlay just for Enlightenment, let me know if that would help you.
-
-=== Enlightenment e16 ===
-
-Old Enlightenment-e16 is still maintained. Install it from Gentoo's main tree with
-
-{{RootCmd|emerge --ask e16}}
+With the premises done, we can now move into configuring the installation before merging the DE.
 
 == Configuration ==
 
-=== Enlightenment ===
+If you have an `/etc/portage/package.[accept_]keywords' directory, you can keywords all the base packages with a single line (lazy way).
 
-Enlightenment's configuration is all handled through the settings editor from within enlightenment. You can access some "under-the-hood" config options with
+{{RootCmd|ln -s /var/lib/layman/enlightenment/scripts/package.keywords.snapshots /etc/portage/package.keywords/enlightenment.keywords}}
 
-{{Cmd|elementary_config}} 
+Or else you will have to add every necessary package in that file with something like the following.
 
-And there's also a command line tool called <code>vieet</code> which especially useful in emergency. In many cases, if your Enlightenment's configuration gets broken, moving {{Path|~/.e}} and {{Path|~/.elementary}} to a temporary place, then re-starting Enlightenment usually helps.
+{{File|/etc/portage/package.accept_keywords||<pre>
+# e17-base
+=dev-libs/efreet-9999 ** 
+=media-libs/evas-9999 ** 
+=media-libs/edje-9999 ** 
+=dev-libs/eina-9999 ** 
+=dev-libs/e_dbus-9999 ** 
+=dev-libs/embryo-9999 ** 
+=dev-libs/ecore-9999 ** 
+=x11-wm/enlightenment-9999 ** 
+=dev-libs/eet-9999 ** 
+=dev-libs/eeze-9999 ** 
+# e17-base_modules
+=x11-plugins/e_modules-cpu-9999 ** 
+=x11-plugins/e_modules-eweather-9999 ** 
+=x11-plugins/e_modules-mpdule-9999 ** 
+=x11-plugins/e_modules-taskbar-9999 ** 
+=x11-plugins/e_modules-winselector-9999 ** 
+=x11-plugins/e_modules-mail-9999 ** 
+=x11-plugins/e_modules-deskshow-9999 ** 
+=x11-plugins/e_modules-screenshot-9999 ** 
+=x11-plugins/e_modules-tclock-9999 ** 
+=x11-plugins/e_modules-calendar-9999 ** 
+=x11-plugins/e_modules-alarm-9999 ** 
+=x11-plugins/e_modules-everything-aspell-9999 **
+=x11-plugins/e_modules-everything-mpris-9999 **
+=x11-plugins/e_modules-everything-wallpaper-9999 **
+=x11-plugins/e_modules-engage-9999 ** 
+=x11-plugins/e_modules-quickaccess-9999 **
+# e17-extras
+=dev-util/editje-9999 ** 
+=net-libs/libeweather-9999 ** 
+=x11-libs/elementary-9999 ** 
+=x11-plugins/elsa-9999 ** 
+=dev-python/python-ecore-9999 ** 
+=dev-python/python-edje-9999 ** 
+=dev-python/python-elementary-9999 ** 
+=dev-python/python-evas-9999 ** 
+=x11-plugins/ecomorph-9999 **
+=x11-wm/ecomp-9999 **
+=x11-themes/detourious-9999 ** 
+=x11-themes/efenniht-9999 **</pre>}}
 
-=== Launching enlightenment with startx ===
+Notice that there are a few package listed above, especially those after the `e17-extras' commented line that are not yet in the official overlay, so you will have to either add them to your local overlay or add another [https://github.com/tokiclover/bar-overlay bar-overlay] which had them. It's good to be able to get at least a few themes especially those that are supported and hosted on enlightenment trunk. So go ahead and the previous cited overlay if you don't want to make ebuilds.
 
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-exec dbus-launch --exit-with-session enlightenment_start
-}}
+I will also advise to add a few USE flags as sane default to be able to auto mount removable devices etc.
 
-== Tips and tricks ==
+{{File|/etc/portage/package.use||<pre>
+media-libs/evas fontconfig
+dev-libs/ecore evas fbcon curl
+media-libs/edje cache vim-syntax
+x11-wm/enlightenment udev ukit
+x11-libs/elementary -quicklaunch thumbnails weather xdg
+x11-themes/efennhit gtk</pre>}}
 
-=== Adding Gadgets to desktop ===
+Some USE flag can be set globally like `jpeg png opengl nls gnutls ssl' ... in `/etc/make.conf'.
 
-Open up menu and navigate to "Desktop -> Add Gadgets". 
+== Installation ==
 
-=== Autostarting applications on login ===
+If you don't want to undergo the painful manual installation of each package, you'd better get sys-apps/portage-2.2.0_alpha* before going further.
 
-There's a comprehensive setting editor for that in the Settings Panel, under "Applications -> Autostart applications"
+{{File|/etc/portage/package.accept_keywords||<pre>=sys-apps/portage-2.2.0_alpha* **</pre>}}
+{{Emerge|portage}}
 
-=== Disabling desktop application icons ===
+Now one can add two sets to `/etc/portage/sets' to ease merging and rebuilding the packages.
 
-The option to disable application icons in desktop is a bit hidden. Open Settings Panel then go to "Files" tab, navigate to "File Manager -> Display" and uncheck "Icons On Desktop".
+{{File|/etc/portage/sets/e_base||<pre>
+=dev-libs/eina-9999
+=dev-libs/eet-9999
+=media-libs/evas-9999
+=dev-libs/ecore-9999
+=dev-libs/efreet-9999
+=dev-libs/embryo-9999
+=media-libs/edje-9999
+=dev-libs/e_dbus-9999
+=dev-libs/eeze-9999
+=x11-wm/enlightenment-9999</pre>}}
 
-=== Using 'bryce' instead of old-fashioned panel ===
+{{File|/etc/portage/sets/e_xtra||<pre>
+=dev-python/python-ecore-9999
+=dev-python/python-edje-9999
+=dev-python/python-elementary-9999
+=dev-python/python-evas-9999
+=net-libs/libeweather-9999
+=x11-libs/elementary-9999
+=dev-util/editje-9999
+=x11-plugins/ecomorph-9999
+=x11-wm/ecomp-9999
+=x11-plugins/e_modules-cpu-9999
+=x11-plugins/e_modules-engage-9999
+=x11-plugins/e_modules-eweather-9999
+=x11-plugins/e_modules-everything-aspell-9999
+=x11-plugins/e_modules-everything-mpris-9999
+=x11-plugins/e_modules-everything-wallpaper-9999
+=x11-plugins/e_modules-everything-websearch-9999
+=x11-plugins/e_modules-quickaccess-9999
+=x11-plugins/e_modules-mail-9999
+=x11-plugins/e_modules-screenshot-9999
+=x11-plugins/e_modules-taskbar-9999
+=x11-plugins/e_modules-tclock-9999
+=x11-plugins/e_modules-winselector-9999
+=x11-themes/detourious-9999
+=x11-themes/efenniht-9999
+=x11-plugins/ekbd-9999
+=x11-plugins/elsa-9999</pre>}}
 
-With recent versions, users can opt to use experimental new "bryce" instead of old panel. Open desktop menu and navigate to "Desktop -> Add Bryce". Bryces are experimental in Enlightenment's versions below 0.23.
+And now one can finish the installation with:
 
-=== Wayland session ===
+{{Emerge|@e_base}}
+{{Emerge|@e_xtra}}
 
-{{Important|At the time of writing (19 Aug 2018) Enlightenment with Wayland session is '''not''' considered stable for everyday use.}}
+There are two sets to avoid unnecessary issues implied by the order of merging. Now one can start E17 desktop environment by launching the default display manager.
 
-Easiest way to start a wayland session is to use a wayland-compliant login manager, like [https://packages.gentoo.org/packages/gnome-base/gdm GDM] or [https://packages.gentoo.org/packages/x11-misc/sddm SDDM]. Wayland session can be started from TTY also, by exporting  
-{{Cmd|ECORE_EVAS_ENGINE{{=}}wayland_egl ELM_DISPLAY{{=}}wl ELM_ACCEL{{=}}gl enlightenment_start}}
+Or else, one can use simple ~/.{xinitrc,bash_log{in,out}} or [[zsh]] version `~/.zlog{in,out}' scheme to avoid unnecessary extra packages to just be able to log into your session. And do not forget to merge {{Package|net-misc/networkmanager}} and {{Package|gnome-extra/nm-applet}} to be able to switch to different networks easily because, last time I've checked, {{Package|net-misc/connman}} did not work at all despite that there's a E17 module for it.
 
-where '''ECORE_EVAS_ENGINE''' is set to ''wayland_egl'' or ''wayland_shm'' depending on whether you wish to use the SHM based software rendering or EGL.
+{{File|~/.xinitrc||<pre>
+# $Id: ~/.xinitrc, 2012/06/23 02:33:53 -tclover Exp $
+eval $(gnome-keyring-daemon --components=pkcs11,secrets,ssh,gpg)
+export GNOME_KEYRING_PID
+export GNOME_KEYRING_SOCKET
+export SSH_AUTH_SOCK
+export GPG_AGENT_INFO
+dbus-launch nm-applet --sm-disable &
+dbus-launch gcm-session &
+/usr/libexec/polkit-gnome-authentication-agent-1 &
+#xcalib -gc 1.0 -b 0.0 -co 100.0 .icc/sRGB_v4_ICC_preference.icc
+laditray &>/dev/null &
+unclutter -idle 8 -noevents &
+[[ -f ~/.Xmodmap ]] && xmodmap ~/.Xmodmap
+xset s off
+xset fp+ /usr/share/fonts/TTF-FD/
+xset fp+ /usr/share/fonts/artwiz-latin1
+xset fp+ /usr/share/fonts/artwiz-aleczapka-en
+xset fp+ /usr/share/fonts/terminus
+xset fp rehash
+xrdb -load ~/.Xresources
+#xrdb -merge ~/.Xdefaults
+#[[ -f ~/.xcolors/sj-bright ]] && xrdb -merge ~/.xcolors/sj-bright
+urxvtd -q -o -f &
+case $(tty | cut -b9-) in
+    1) exec ck-launch-session dbus-launch --sh-syntax --exit-with-session enlightenment_start.sh;;
+    2) exec ck-launch-session dbus-launch --sh-syntax --exit-with-session lxsession             ;;
+    3) exec ck-launch-session dbus-launch --sh-syntax --exit-with-session openbox-session       ;;
+esac
+# vim:fenc=utf-8:ci:pi:sts=0:sw=4:ts=4:</pre>}}
+{{Note|Notice that the E17 session uses ecomp+ecomorph combination, edit `~/.xinitrc' by removing the `.sh' suffix accordingly if not using it.}} 
+{{File|~/.bash_login||<pre>
+# $Id: ~/.bash_login, 2012/06/23 02:26:52 -tclover Exp $
+# auto startx depending on the tty
+[[ -z $DISPLAY ]] && [[ $UID != 0 ]] && [[ $(tty | cut -c9) -le 3 ]] &&
+    startx &> ~/.xsession-errors &
+# start gnome-keyring
+[[ -n $DISPLAY ]] && [[ -z $GNOME_KEYRING_PID ]] && {
+    eval $(gnome-keyring-daemon)
+    export GNOME_KEYRING_PID
+    export GNOME_KEYRING_SOCKET
+    export SSH_AUTH_SOCK
+    export GPG_AGENT_INFO
+}
+# vim:fenc=utf-8:ci:pi:sts=0:sw=4:ts=4:</pre>}}
+A zsh version could be used instead.
+{{File|~/.zlogin||<pre>
+# $Id: ~/.zlogin, 2012/06/23 02:27:12 -tclover Exp $
+# auto startx depending on the tty
+if [[ -z $DISPLAY ]] && [[ $EUID != 0 ]] && [[ ${$(tty)#*tty} -le 3 ]] { 
+	startx &> ~/.xsession-errors &
+}
+# start gnome-keyring
+if [[ -n $DISPLAY ]] && [[ -z $GNOME_KEYRING_PID ]] {
+	eval $(gnome-keyring-daemon)
+	export GNOME_KEYRING_PID
+	export GNOME_KEYRING_SOCKET
+	export SSH_AUTH_SOCK
+	export GPG_AGENT_INFO
+}
+# vim:fenc=utf-8:ci:pi:sts=0:sw=4:ts=4:</pre>}}
+{{File|~/.bash_logout||<pre>
+# $Id: ~/.bash_logout, 2011/11/15 -tclover Exp $
+[[ -n $GNOME_KEYRING_PID ]] && kill -TERM $GNOME_KEYRING_PID
+[[ -n $DISPLAY ]] && [[ $UID != 0 ]] && fhp &>/dev/null
+# vim:fenc=utf-8:ci:pi:sts=0:sw=4:ts=4:</pre>}}
+{{File|~/.zlogout||<pre>
+# $Id: ~/.zlogout$
+if [[ -n $GNOME_KEYRING_PID ]] { kill -TERM $GNOME_KEYRING_PID }
+if [[ -n $DISPLAY ]] && [[ $EUID != 0 ]] { fhp &>/dev/null }
+# vim:fenc=utf-8:ci:pi:sts=0:sw=4:ts=4:</pre>}}
 
-When using software rendering, also export '''ELM_ACCEL=none'''.
+The previous can be used to login into an E17 session easily without needing any ''middle man'' like {{Package|x11-misc/slim}} depending on tty or console used to log in.
 
-== EFL-based applications ==
+{{Important|You do need the *kits ({{Package|sys-auth/consolekit}} and {{Package|sys-auth/polkit}} {{Package|sys-fs/udisks}}) associated to {{Package|lxde-base/lxpolkit}} or {{Package|gnome-extra/polkit-gnome}} or {{Package|sys-auth/polkit-kde}} to be able to automount removable devices. Additionally, you will need the following file.}}
 
-[https://packages.gentoo.org/packages/dev-libs/efl EFL] and [https://packages.gentoo.org/packages/dev-python/python-efl python-efl] offer developers everything needed to develop eye-candy applications that integrate into Enlightenment WM. Here are few of them, 
+{{File|/etc/polkit-1/localauthority/50-local.d/11-udisks.pkla||<pre>
+[udisks full access]
+Identity=unix-user:users
+Action=org.freedesktop.udisks.*
+ResultAny=yes</pre>}}
 
-* [https://packages.gentoo.org/packages/dev-util/edi Edi] An EFL-based IDE
-* [https://packages.gentoo.org/packages/media-gfx/ephoto Ephoto] Enlightenment image viewer written with EFL 
-* [https://packages.gentoo.org/packages/net-misc/econnman Econnman] ConnMan User Interface for Enlightenment
-* [https://packages.gentoo.org/packages/sys-process/evisum Evisum] System and process monitor written with EFL 
-* [https://packages.gentoo.org/packages/x11-misc/enlightenment-extra enlightenment-extra]  An app for downloading themes and add-ons to Enlightenment WM 
-* [https://packages.gentoo.org/packages/x11-terms/terminology terminology] Feature rich terminal emulator
-* [https://packages.gentoo.org/packages/x11-themes/e-gtk-theme e-gtk-theme] A GTK theme to match Enlightenment WM's default theme
-
-
-{{Note|Anyone can add software they use via [https://wiki.gentoo.org/wiki/Project:Proxy_Maintainers the proxy-maint project]. Please do so. [https://phab.enlightenment.org/w/ A short list of external applications]. And [https://phab.enlightenment.org/w/projects/python_bindings_for_efl/ some python-efl applications].}}
-
-== Troubleshooting ==
-
-=== Applications requiring system tray not working properly ===
-
-Older applications still using xembed systray instead of appindicator may not work properly (Dropbox for example). Solution is to install a stand-alone system tray program, such as [https://packages.gentoo.org/packages/x11-misc/stalonetray stalonetray].
-
-=== Black window contents ===
-
-If you get windows with completely black contents (most likely with the nvidia proprietary driver and Enlightenment 0.20.5 or 0.20.6), follow these steps:
-* log out from Xorg.
-* set E_COMP_ENGINE=sw, for example in .xinitrc:
-{{FileBox|filename=~/.xinitrc|lang=bash|1=
-export E_COMP_ENGINE=sw
-exec dbus-launch --exit-with-session enlightenment_start
-}}
-Alternatively, you can set the variable in /etc/environment.
-* start X.
-* Go to Settings->Composite->Advanced->Rendering and disable "Texture from pixmap".
-* Then you can remove "export E_COMP_ENGINE=sw" from .xinitrc and log out/in to get accelerated rendering again.
-
-For more information see [https://phab.enlightenment.org/T3030 this bug report].
-
-=== "build error: conflicting types for ‘GLintptr’" ===
-
-Most likely due to newer Mesa dropping openGL support for older graphics cards. Try building dev-libs/efl with <code>gles2 -opengl</code> to get GL working again.
-
-=== "build error: undefined symbol: _EFL_GFX_PATH_CHANGED" ===
-
-An unfortunate build error that's caused by existing libraries. There is usually a more detailed error, like: "/usr/lib64/libector.so.1: undefined symbol: _EFL_GFX_PATH_CHANGED". In this case, remove any existing installation of dev-libs/efl and the offending library. 
-
-{{Important|It's wise to log out from Enlightenment before removing efl. Removing efl while using Enlightenment might cause Enlightenment to act weirdly and in the worst case lock up. If that happens, you won't see if the build fails. Log in to TTY or some other WM/DE while re-installing efl.}}
-
-{{RootCmd|emerge -C --nodeps dev-libs/efl}}
-{{RootCmd|rm /usr/lib64/libector.so.1}}
-{{Emerge|dev-libs/efl}}
-
-See more in [https://bugs.gentoo.org/651890 #651890].
-
-=== Debugging ===
-
-If you've tried to move your config files away and Enlightenment still doesn't work, you can debug the problem by typing 
-
-{{Cmd|<nowiki>enlightenment_start 2>&1 | tee logthing.txt</nowiki>}}
-
-and reading the log file. It is useful when making a bug report to [https://bugs.gentoo.org/ bugs.gentoo.org] or upstream's [https://phab.enlightenment.org/project/ Phabricator]. If the log file doesn't imply clear errors, you might have to install and run it it with debugging tools like [https://packages.gentoo.org/packages/sys-devel/gdb gdb], [https://packages.gentoo.org/packages/dev-util/strace strace] or [https://packages.gentoo.org/packages/dev-util/valgrind valgrind].
-
-{{Cmd|<nowiki>E_START=1 strace enlightenment_start 2>&1 | tee logthing.txt</nowiki>}}
-
-=== "No opengl engines found" with nvidia-drivers ===
-
-With latest releases of mesa and xorg-1.20, [https://packages.gentoo.org/packages/dev-libs/efl efl] can look for {{Path|libGL.so }} from a wrong place. This results in Enlightenment's gl-engine not using opengl backend. This can be fixed with [https://packages.gentoo.org/packages/dev-util/patchelf patchelf] utility. 
-
-Identify where your {{Path|libGL.so}} is installed, usually {{Path|/usr/lib/opengl/nvidia/lib/libGL.so}}. Then use patchelf to modify [https://packages.gentoo.org/packages/dev-libs/efl efl]'s gl engine, 
-
-{{Cmd|patchelf --set-rpath /usr/lib/opengl/nvidia/lib/ /usr/lib64/evas/modules/engines/gl_x11/v-1.20/module.so}}
-
-And relog. Paths depend on your architechture. This needs to be done once, or everytime [https://packages.gentoo.org/packages/dev-libs/efl efl] is re-installed.
-
-== Screenshots ==
-
-<gallery widths=400px  heights=250px>
-E22-1.png
-</gallery>
-
-<gallery widths=400px  heights=250px>
-E22-2.png
-</gallery>
-
-<gallery widths=400px  heights=250px>
-E22-3.png
-</gallery>
-
-<gallery widths=400px  heights=250px>
-E-0.17.0-shot-2013-01-13 03-52-02.png
-</gallery>
-
-<gallery widths=400px  heights=250px>
-Evisum-1.png
-</gallery>
-
-<gallery widths=400px  heights=250px>
-Evisum-2.png
-</gallery>
-
-<gallery widths=400px  heights=250px>
-E-5.png
-</gallery>
-
-== See also ==
-
-* {{See also|Recommended applications}}
-
-== External resources ==
-
-* [https://phab.enlightenment.org/w/e_window_manager_faq/ E Window Manager Faq]
-* [https://github.com/tokiclover/e-gtk-theme GTK Theme to match the new dark default theme]
-* [https://enlightenment.org Homepage]
-* [[Wikipedia:Enlightenment (window manager)|Wikipedia article]]
-* [https://wiki.archlinux.org/index.php/enlightenment Arch linux Wiki page]
-* [https://phab.enlightenment.org/w/arcanist/ Sending patches upstream]
-
-[[Category:Wayland compositor]]
-[[Category:Window manager]]
+[[Category:Desktop Environment]]
