--- a/Samsung_NC_10.mw
+++ b/Samsung_NC_10.mw
@@ -1,23 +1,20 @@
-{{Stub}}
+==Overview==
+
 This is an article about running Gentoo on an Samsung NC 10 series laptop.
 
-== Laptop Specifications ==
-Hardware specs may vary.
+==Laptop Specifications==
 
-== Install driver packages ==
-{{Emerge|x11-libs/libva-intel-driver x11-apps/intel-gpu-tools sys-apps/915resolution x11-drivers/xf86-video-intel}}
+Hardware specs may vary. These are the specs for the model 10CA.M006.20090716.RHU:
 
-== Problems ==
-The i915 card is really unique in X and boot behaviour.
 
-=== Problems with kernel 3.2 ===
-Use these boot settings for X:
+=== Problems ===
+* thermal zone driver seems to be confused and fan seems to turn on way too often and too early
+<pre>
 
- vga=0x315 acpi=force i915.modeset=1 i915.lvds_use_ssc=0 i915.i915_enable_rc6=1
+Problems with new Kernel 3.4.x.
+Use this boot settings for X:
 
-=== Problems with kernel 3.4 ===
-Use these boot settings for X:
+acpi=force pcie_aspm=force i915.modeset=1 i915.i915_enable_fbc=1 i915.lvds_use_ssc=0 i915.i915_enable_rc6=1 i915.lvds_downclock=1 drm.vblankoffdelay=1 irqpoll
+</pre>
 
- vga=0x315 acpi=force pcie_aspm=force i915.modeset=1 i915.i915_enable_fbc=1 i915.lvds_use_ssc=0 i915.i915_enable_rc6=1 i915.lvds_downclock=1 drm.vblankoffdelay=1 irqpoll
-
-[[Category:Laptops]]
+[[Category:Hardware]]
