--- a/Asus_Eee_PC_1000H.mw
+++ b/Asus_Eee_PC_1000H.mw
@@ -1,188 +1,10 @@
-== Hardware Specs ==
-
-* [https://ark.intel.com/products/36331/Intel-Atom-Processor-N270-512K-Cache-1-60-GHz-533-MHz-FSB- Intel Atom N270] (with turbo up to 1.8GHz using the {{c|eeepc_laptop}} driver)
-* 10.1" LCD screen (1024×600)
-* i945 graphics chipset (“gen3”, OpenGL 1.4)
-* 1 GB DDR2-533 RAM (upgradable to 2GB)
-* 160GB hard disk
-* 3× USB2 ports, SD card reader (SDHC compatible), VGA port
-* 10/100 Ethernet
-* 2.4GHz Wi-Fi B/G/N support
-* Bluetooth 2.1
-* HDA audio
-* 1.3 megapixel webcam
-
-Although the N270 CPU was considered weak even at launch, its lack of speculative execution hardware makes it immune to [[Project:Security/Vulnerabilities/Meltdown_and_Spectre|Spectre and related security issues]]:
-{{RootCmd|grep <nowiki>''</nowiki> /sys/devices/system/cpu/vulnerabilities/*|output=<pre>
-/sys/devices/system/cpu/vulnerabilities/l1tf:Not affected
-/sys/devices/system/cpu/vulnerabilities/meltdown:Not affected
-/sys/devices/system/cpu/vulnerabilities/spec_store_bypass:Not affected
-/sys/devices/system/cpu/vulnerabilities/spectre_v1:Not affected
-/sys/devices/system/cpu/vulnerabilities/spectre_v2:Not affected
-</pre>}}
-
-== Installation ==
-
-As with most netbooks the Eee PC 1000H lacks an optical drive; an external one may be used, but a more common choice is [[LiveUSB/Guide|creating LiveUSB boot media]]. To boot from external media you have to press {{Key|Esc}} during the BIOS boot splash screen and select the right installation medium. After booting a live system follow the [[Handbook:X86|Gentoo Linux x86 Handbook]].
-
-{{note|The BIOS contains a “Boot Booster” feature, designed to speed up the boot process by caching some info on the hard disk. To ensure this works correctly, create one unused disk partition with MBR partition type {{c|EF}}, at least 32MB in size.}}
-
-=== make.conf ===
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-CFLAGS="-O2 -pipe -march=bonnell -msahf -mmovbe -mfxsr"
-CXXFLAGS="${CFLAGS}"
-CPU_FLAGS_X86="mmx mmxext sse sse2 sse3 ssse3"
-VIDEO_CARDS="intel i915"
-INPUT_DEVICES="libinput"
-}}
-
-=== Compilation speed ===
-
-To reduce compiling time and decrease the likelihood of builds failing due to low memory, consider using one or more of [[ccache]], [[distcc]], or [[zram]]. Upgrading the RAM to 2GB will help too, especially if building modern web browsers.
-
-== Kernel Configuration ==
-
-=== CPU ===
-{{KernelBox|title=Intel Atom N270|1=
-[ ] 64-bit kernel
-Processor type and features  --->
-    Processor family ()  --->
-        <*> Intel Atom
-Power management and ACPI options  --->
-    [*] Cpuidle Driver for Intel Processors
-}}
-
-=== Hard disk ===
-{{KernelBox|title=00:1f.2 IDE interface: Intel Corporation 82801GBM/GHM (ICH7-M Family) SATA Controller [IDE mode]|1=
-Device Drivers --->
-    <*> Serial ATA and Parallel ATA drivers (libata)  --->
-        <*>   AHCI SATA support
-        [*]   ATA SFF support
-        [*]     ATA BMDMA support
-        <*>     Intel ESB, ICH, PIIX3, PIIX4 PATA/SATA support
-}}
-
-{{note|{{c|lspci}} and other tools will show the drive controller operating in IDE emulation mode. This is a limitation imposed by the BIOS and can't be fixed.}}
-
-=== Graphics ===
-{{KernelBox|title=00:02.0 VGA compatible controller: Intel Corporation Mobile 945GSE Express Integrated Graphics Controller|1=
-Device Drivers  --->
-    Graphics support  --->
-        < > /dev/agpgart (AGP Support)  --->
-        <*> Direct Rendering Manager (XFree86 4.1.0 and higher DRI support) --->
-            [*]   Enable legacy fbdev support for your modesetting driver
-        <*> Intel 8xx/9xx/G3x/G4x/HD Graphics
-}}
-
-=== Sound ===
-{{KernelBox|title=00:1b.0 Audio device: Intel Corporation NM10/ICH7 Family High Definition Audio Controller|1=
-Device Drivers --->
-    <*> Sound Card Support --->
-        <*> Advanced Linux Sound Architecture --->
-            HD-Audio --->
-                <*> HD Audio PCI
-                <*> Build Realtek HD-audio codec support
-}}
-
-=== Ethernet ===
-{{KernelBox|title=03:00.0 Ethernet controller: Qualcomm Atheros AR8121/AR8113/AR8114 Gigabit or Fast Ethernet|1=
-Device Drivers  --->
-    Networking support  --->
-        [*] Network device support --->
-            [*] Ethernet driver support --->
-                [*]   Atheros devices
-                <*>     Atheros L1E Gigabit Ethernet support
-}}
-
-{{note|Although the label says gigabit, this Ethernet hardware only supports 10/100.}}
-
-=== Wireless ===
-{{KernelBox|title=01:00.0 Network controller: Ralink corp. RT2790 Wireless 802.11n 1T/2R PCIe|1=
-Bus options (PCI etc.)  --->
-    [*] PCI Express Port Bus support
-    [*]   PCI Express Hotplug driver
-    [*] Support for PCI Hotplug  --->
-        [*]   ACPI PCI Hotplug driver
-[*] Networking support  --->
-    <*> Wireless  --->
-        <*> cfg80211 - wireless configuration API
-        <*> Generic IEEE 802.11 Networking Stack (mac80211)
-Device Drivers  --->
-    Generic Driver Options  --->
-        Firmware loader  --->
-            (rt2860.bin regulatory.db regulatory.db.p7s) Build named firmware blobs into the kernel binary
-            (/lib/firmware) Firmware blobs root directory
-    Network device support  --->
-        Wireless LAN  --->
-            [*] Ralink devices  --->
-                <*> Ralink driver support  --->
-                    <*> Ralink rt27xx/rt28xx/rt30xx (PCI/PCIe/PCMCIA) support
-}}
-
-The required firmware files are available in {{package|sys-kernel/linux-firmware}} and {{package|net-wireless/wireless-regdb}}. PCIe hotplug is required for the {{Key|Fn+F2}} keyboard toggle to actually switch the card on and off.
-
-=== Touchpad ===
-{{KernelBox|title=ETPS/2 Elantech Touchpad|1=
-Device Drivers --->
-    Input device support --->
-        <*> Event interface
-        [*] Mice --->
-            <*> PS/2 mouse
-                [*] Elantech PS/2 protocol extension
-                [ ]   Elantech PS/2 SMbus companion
-}}
-
-=== ACPI, LEDs and Hotkeys ===
-{{KernelBox|title=Asus EeePC extra buttons, hotplug toggles, hardware sensors, turbo mode support|1=
-Device Drivers --->
-    [*] X86 Platform Specific Device Drivers --->
-        <*>   Eee PC Hotkey Driver
-}}
-
-If you have updated the BIOS to a recent version, it assumes you'll be running Windows 7 and by default presents a WMI interface instead of the native {{c|eeepc_laptop}} one. To fix this, append {{c|1=acpi_osi=Linux}} to the kernel command line. Although the kernel has an Eee PC WMI driver, it's intended for newer hardware and is severely crippled on this laptop.
-
-Newer BIOS revisions have more {{key|Fn}} combinations (mostly on the unlabelled F-keys). Stable versions of the kernel have already received updates to recognize most of these, but {{key|Fn}}+{{key|space}} is still missing as of 4.19; [https://gitlab.com/flussence/kernel-patches a patch] fixes that.
-
-=== USB ===
-{{KernelBox|title=00:1d.7 USB controller: Intel Corporation NM10/ICH7 Family USB2 EHCI Controller|1=
-Device Drivers --->
-    [*] USB support  --->
-        <*>   Support for Host-side USB
-        <*>     EHCI HCD (USB 2.0) support
-            [*]     Root Hub Transaction Translators
-            [*]     Improved Transaction Translator scheduling
-        < >     OHCI HCD (USB 1.1) support
-        <*>     UHCI HCD (most Intel and VIA) support
-}}
-
-Several internal devices are on the USB bus:
-
-==== Bluetooth ====
-{{KernelBox|title=0b05:b700 ASUSTek Computer, Inc. Broadcom Bluetooth 2.1|1=
-[*] Networking support  --->
-    <*> Bluetooth subsystem support  --->
-        [*]  Bluetooth Classic (BR/EDR) features
-        Bluetooth device drivers  --->
-            <*>  HCI USB driver
-            [*]    Enable USB autosuspend for Bluetooth USB devices by default
-}}
-
-==== SD card reader ====
-{{KernelBox|title=058f:6335 Alcor Micro Corp. SD/MMC Card Reader|1=
-Device Drivers --->
-    [*] USB support  --->
-        <*>   USB Mass Storage support
-}}
-
-==== Webcam ====
-{{KernelBox|title=04f2:b071 Chicony Electronics Co., Ltd 2.0M UVC Webcam / CNF7129|1=
-Device Drivers  --->
-    <*> Multimedia support  --->
-        [*]  Cameras/video grabbers support
-        [*]  Media USB Adapters  --->
-             <*>  USB Video Class (UVC)
-             [*]        UVC input events device support
-}}
-
-[[Category:Netbooks]]
+The Asus Eee PC 1000H was released in September 2008.<br />
+Basic features: 10-inch screen, Intel Atom N270, 1GB of RAM (upgradable to 2GB), 160GB Harddisc, 1.3-Megapixel-Webcam, Bluetooth WLAN-N support
+= Installation =
+== Choosing the right installation medium ==
+The Eee PC 1000H does not have an optical drive, like every other Netbook, using a LiveUSB is the common choose. For instructions and further information see [http://www.gentoo.org/doc/en/liveusb.xml Gentoo Linux LiveUSB HOWTO].
+Otherwise use a externel optical drive.
+To boot from LiveUSB or disc you have to press ESC, when the Eee PC logo is prompted and select the right installation medium.
+== Install process ==
+After booting a live system follow the [http://www.gentoo.org/doc/en/handbook/handbook-x86.xml Gentoo Linux x86 Handbook]
+= Hardware =
