--- a/Tmux.mw
+++ b/Tmux.mw
@@ -1,131 +1,45 @@
-<languages/>
-<translate>
-<!--T:1-->
-{{Lowercase title}}
 {{InfoBox stack
-|{{InfoBox homepage|https://tmux.github.io/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox ohloh}}
+|{{InfoBox wikipedia|tmux|header=true}}
+|{{InfoBox ohloh|tmux}}
+}}
+tmux is a program that enables a number of terminals (or windows), each running a separate program, to be created, accessed, and controlled from a single screen. Users familiar with GNU Screen may find that tmux is a good alternative.
+
+== Installation ==
+Terminal multiplexer<br>
+{{Package|app-misc/tmux}} is available on Gentoo Linux and supports the following useflags:
+{{USEflag
+|package=app-misc/screen
+|vim-syntax+++
 }}
 
-<!--T:2-->
-{{c|tmux}} ('''t'''erminal '''mu'''ltiple'''x'''er) is [[Article description::a program that enables a number of terminals (or windows), each running a separate program, to be created, accessed, and controlled from a single screen or terminal window.]] {{c|tmux}} may be detached from a screen and continue running in the background, then later reattached.<ref>http://man7.org/linux/man-pages/man1/tmux.1.html</ref> Users familiar with GNU [[Screen]] may find tmux as a good alternative.
-
-== Installation == <!--T:3-->
-
-=== USE flags === <!--T:4-->
-
-<!--T:5-->
-{{USEflag|package=app-misc/tmux}}
-
-=== Emerge === <!--T:6-->
-
-<!--T:7-->
-Install {{Package|app-misc/tmux}}:
-
-<!--T:8-->
+You can install tmux using the following command:
 {{Emerge|app-misc/tmux}}
 
-== Configuration == <!--T:9-->
+The configuration files are located in
 
-<!--T:10-->
-Standard installation of {{c|tmux}} will not install a global ({{Path|/etc/tmux.conf}}) or user ({{Path|~/.tmux.conf}}) configuration file. Examples are provided in the {{Path|/usr/share/doc/tmux-{VERSION}/example_tmux.conf}} file and can be copied to a world or user location and edited as desired using a [[text editor]].
+{{Code|tmux Configuration File|<pre>
+~/.tmux.conf</pre>}}
 
-=== Package examples === <!--T:11-->
+== Usage ==
+General usage of tmux
+=== Start Session ===
+Once started tmux will create a socket for the session in /temp/S-<UID>/<Session Name>
+tmux can be started with the following command:
+{{Cmd|tmux}}
+tmux can be controlled from an attached client by using a key combination of a prefix key, {{Key|Ctrl}}+{{Key|b}} by default, followed by a command key.<br>
+Give the session a reasonable name on startup:
+{{Cmd|tmux new-session -t portage}}
+Start a command in a screen session without attaching to it (like a daemon):
+{{Cmd|tmux new-session -d 'emerge -pvuDN world'}}
+=== Commands ===
+After pressing {{Key|Ctrl}}+{{Key|b}} the following key combinations can be used:
 
-<!--T:12-->
-To see a list of configuration files, run the following command:
-
-<!--T:13-->
-{{Cmd|ls /usr/share/doc/tmux-2.0/examples|output=<pre>
-h-boetes.conf.bz2  n-marriott.conf.bz2  screen-keys.conf.bz2  t-williams.conf.bz2  vim-keys.conf.bz2
-</pre>}}
-
-<!--T:14-->
-Then use {{c|cp}} to move one of the files to either the global location (which will affect all users) or to the user's home directory.
-
-=== Wiki example === <!--T:15-->
-
-<!--T:16-->
-The following is an example {{Path|~/.tmux.conf}} file:
-
-<!--T:17-->
-{{FileBox|filename=~/.tmux.conf|1=
-set -g default-terminal "screen-256color"   # Use 256 colors
-set -g history-limit 100000                 # Scrollback buffer number of lines
- 
-# Start window indexing at one instead of zero
-set -g base-index 1
- 
-# Set the prefix key and some key bindings to match GNU Screen
-set -g prefix C-a
-bind-key C-a last-window
- 
-# Key bindings for horizontal and vertical panes
-unbind %
-bind {{!}} split-window -h
-bind - split-window -v
- 
-# Enable window titles
-#set -g set-titles on
- 
-# Window title string (uses statusbar variables)
-set -g set-titles-string '#T'
- 
-# Status bar with load and time
-set -g status-bg '#4e4e4e'
-set -g status-fg '#ffffff'
-set -g status-left ' '
-set -g status-right '#[bg=#bbbbbb]#[fg=#000000]#(cut -d " " -f -3 /proc/loadavg) #[bg=#4e4e4e]#[fg=#ffffff]#(
-date +" %H:%M ")'
-set -g window-status-format '#I #W'
-set -g window-status-current-format ' #I #W '
-setw -g window-status-current-bg '#55ff55'
-setw -g window-status-current-fg '#000000'
- 
-# Pane border colors
-set -g pane-active-border-fg '#bbbbbb'
-set -g pane-border-fg '#555555'
- 
-# Bind to reload config
-bind r source-file ~/.tmux.conf
-}}
-
-=== Plugins === <!--T:18-->
-
-<!--T:19-->
-A few [[Tmux/plugins|plugins]] are available for {{c|tmux}}. See the sections below for available options.
-
-==== tmux-mem-cpu-load ==== <!--T:20-->
-
-<!--T:21-->
-{{c|tmux-mem-cpu-load}} is a small program designed to monitor system activity in the status line of {{c|tmux}}. See the [[Tmux/plugins/tmux-mem-cpu-load|{{c|tmux-mem-cpu-load}}]] sub-article for more details on the installation process.
-
-==== Tmux Resurrect ==== <!--T:22-->
-
-<!--T:23-->
-{{c|tmux-resurrect}} persists {{c|tmux}} environments across system restarts. See the [[Tmux/plugins/resurrect|resurrect]] sub-article for more details on the installation process.
-
-== Usage == <!--T:24-->
-
-=== Key bindings === <!--T:25-->
-
-<!--T:26-->
-tmux can be controlled from an attached client by using a key combination of a ''prefix key stroke'' ({{Key|Ctrl}}+{{Key|b}} by default) followed by a ''command'' key.
-
-<!--T:27-->
-After pressing {{Key|Ctrl}}+{{Key|B}} the following key combinations can be used:
-
-==== General ==== <!--T:28-->
-
-<!--T:29-->
+==== General ====
 * {{Key|?}} = List all key bindings.
 * {{Key|d}} = Detach the current client.
 * {{Key|:}} = Enter the tmux command prompt.
 
-==== Creating and managing windows ==== <!--T:30-->
-
-<!--T:31-->
+==== Creating/Managing windows ====
 * {{Key|c}} = Create a new window
 * {{Key|n}} = Change to the next window.
 * {{Key|p}} = Change to the previous window.
@@ -136,9 +50,7 @@ After pressing {{Key|Ctrl}}+{{Key|B}} the following key combinations can be used
 * {{Key|w}} = Choose the current window interactively.
 * {{Key|:}}, then type list-windows {{Key|enter}} = Display the list of windows.
 
-==== Creating and managing panes ==== <!--T:32-->
-
-<!--T:33-->
+==== Creating/Managing panes ====
 * {{Key|"}} = Split the current pane into two, top and bottom.
 * {{Key|%}} = Split the current pane into two, left and right.
 * {{Key|o}} = Select the next pane in the current window.
@@ -146,117 +58,71 @@ After pressing {{Key|Ctrl}}+{{Key|B}} the following key combinations can be used
 * {{Key|{}} = Swap the current pane with the previous pane.
 * {{Key|<nowiki>}</nowiki>}} = Swap the current pane with the next pane.
 * {{Key|Ctrl}}+{{Key|o}} = Rotate the panes in the current window forwards.
-* {{Key|Alt}}+{{Key|1}} to {{Key|Alt}}+{{Key|5}} = Arrange panes in one of the five preset layouts: even-horizontal, even-vertical, main-horizontal, main-vertical, or tiled.
 * {{Key|x}} = Kill the current pane.
 * {{Key|!}} = Break the current pane out of the window.
 
-==== Copy, paste, and scroll operations ==== <!--T:34-->
+==== Copy, Paste and Scroll operations ====
+The keys available depend on whether emacs (default) or vi mode is selected. The mode-keys option can be set int .tmux.conf for vi mode.
 
-<!--T:35-->
-The keys available depend on whether emacs (default) or vi mode is selected. The mode-keys option can be set in {{Path|.tmux.conf}} for vi mode.
+=== Resume Session ===
+After the session is detached, all the active terminals remain active and so do commands that didn't finish yet. To list existing sessions:
+{{Cmd|tmux list-sessions
+|output=<pre>standard: 5 windows (created Wed Jul  4 22:12:03 2012) [118x49]</pre>}}
+To resume this session:
+{{Cmd|tmux attach -t standard}}
 
-<!--T:36-->
-* {{Key|[}} = Enter copy mode to copy text or view the history.
-* {{Key|]}} = Paste the most recently copied buffer of text.
-* {{Key|#}} = List all paste buffers.
-* {{Key|-}} = Delete the most recently copied buffer of text.
+== Example .tmux.conf ==
 
-=== Session control === <!--T:37-->
+{{File|$HOME/.tmux.conf||<pre>
+set -g default-terminal "screen-256color"   # use 256 colors
+set -g status-utf8 on                       # enable utf-8
+set -g history-limit 100000                 # scrollback buffer n lines
 
-==== Start session ==== <!--T:38-->
+# start window indexing at one instead of zero
+set -g base-index 1
 
-<!--T:39-->
-Once started {{c|tmux}} creates a socket for the session in {{Path|/tmp/S-<UID>/<Session Name>}}
+# set the prefix key and some key bindings to match GNU Screen
+set -g prefix C-a
+bind-key C-a last-window
 
-<!--T:40-->
-{{c|tmux}} can be started with the following command:
+# key bindings for horizontal and vertical panes
+unbind %
+bind | split-window -h
+bind - split-window -v
 
-<!--T:41-->
-{{Cmd|tmux}}
+# enable window titles
+#set -g set-titles on
 
-<!--T:42-->
-Or, to give the session a name on start up, run:
+# window title string (uses statusbar variables)
+set -g set-titles-string '#T'
 
-<!--T:43-->
-{{Cmd|tmux new-session -s portage}}
+# status bar with load and time
+set -g status-bg '#4e4e4e'
+set -g status-fg '#ffffff'
+set -g status-left ' '
+set -g status-right '#[bg=#bbbbbb]#[fg=#000000]#(uptime | cut -d ":" -f5- | sed 's/,//g') #[bg=#4e4e4e]#[fg=#ffffff]#(
+date +" %H:%M ")'
+set -g window-status-format '#I #W'
+set -g window-status-current-format ' #I #W '
+setw -g window-status-current-bg '#55ff55'
+setw -g window-status-current-fg '#000000'
 
-==== Listing sessions ==== <!--T:44-->
+# pane border colors
+set -g pane-active-border-fg '#bbbbbb'
+set -g pane-border-fg '#555555'
 
-<!--T:45-->
-List {{c|tmux}} sessions to see existing session information:
-
-<!--T:46-->
-{{Cmd|tmux ls|output=<pre>
-0: 1 windows (created Thu Apr  9 09:09:03 2015) [180x65] (attached)
+# bind to reload config
+bind r source-file ~/.tmux.conf
 </pre>}}
 
-<!--T:47-->
-When listing sessions the name of the session should appear as the first item in the session information line. It is possible to see from the output above the session was created without a name, hence the session is to be referenced as <code>0</code>.
+== Solutions to Common Problems ==
 
-<!--T:48-->
-Another way to list sessions is by typing out the long <code>list-sessions</code> argument.
+''stub''
 
-<!--T:49-->
-{{Cmd|tmux list-sessions|output=<pre>
-0: 1 windows (created Thu Apr  9 09:09:03 2015) [180x65] (attached)
-</pre>}}
+== Links ==
+[http://tmux.sourceforge.net/ tmux project site]
 
-<!--T:50-->
-The exact same output as the previous list command is displayed.
-
-==== Renaming a session ==== <!--T:51-->
-
-<!--T:52-->
-Simply using {{c|tmux}} to start a session will not provide the session with a nice, human readable name.
-
-<!--T:53-->
-If the default session name is not descriptive enough (<code>0</code> does not tend to describe much), then a session can be renamed. Suppose Larry the cow started {{c|tmux}} without specifying a session name on start up. He begins working on compiling a new version of Portage, and wants to change the session name to reflect his current task. To change the session name he would first assume control of {{c|tmux}} by pressing the magic key stroke: {{Key|Ctrl}}+{{Key|b}}, then {{Key|:}} which will drop focus into the {{c|tmux}} control line. By default the line should turn yellow. Once there he would issue:
-
-<!--T:54-->
-{{Cmd|prompt=:|rename-session -t 0 portage}}
-
-<!--T:55-->
-Where <code>0</code> is the existing (default) session name and <code>portage</code> is the desired new name for the session. To rename when detached from a {{c|tmux}} session issue:
-
-<!--T:56-->
-{{Cmd|tmux rename-session -t 0 portage}}
-
-==== Resuming a session ==== <!--T:57-->
-
-<!--T:58-->
-After the session is detached, all the active terminals remain active and so do commands that did not finish yet. To resume a session use <code>attach -t <session_name></code>.
-
-<!--T:59-->
-{{Cmd|tmux a -t portage}}
-
-<!--T:60-->
-Or use the long way of attaching to an existing session:
-
-<!--T:61-->
-{{Cmd|tmux attach -t portage}}
-
-==== Daemon-like operation ==== <!--T:62-->
-
-<!--T:63-->
-To start a command in a {{c|tmux}} session ''without'' attaching to the session (like a daemon) use <code>new-session -d</code> followed by the command to execute in quotes:
-
-<!--T:64-->
-{{Cmd|tmux new-session -d 'emerge -uDNvp @world'}}
-
-== See also == <!--T:65-->
-
-<!--T:66-->
-* {{See also|Screen}}
-
-== External resources == <!--T:67-->
-
-<!--T:68-->
-* [https://danielmiessler.com/study/tmux/ An excellent {{c|tmux}} primer].
-* [https://leanpub.com/the-tao-of-tmux/read The Tao of tmux], ebook by Tony Narlock, creator of [https://libtmux.git-pull.com libtmux] and [https://tmuxp.git-pull.com tmuxp].
-
-== References == <!--T:69-->
-
-</translate>
-{{reflist}}
+== See also ==
+* [[screen]] (an alternative to tmux)
 
 [[Category:Software]]
